--- a/src/main/resources/templates/verification.html
+++ b/src/main/resources/templates/verification.html
@@ -10,31 +10,33 @@
 <script type="text/javascript">
     // Set your publishable key: remember to change this to your live publishable key in production
     // See your keys here: https://dashboard.stripe.com/apikeys
-    var stripe = Stripe('pk_test_51OnmGhDmJUkFXVmInRS3yIQkBWIlNxKS9qezUKAjyVIXVtX5OTP6tj478FHiGes7eGWwc34bzJudNRPblBTUf5CK00wcHQbDE3');
+    var stripe = Stripe('pk_test_51OnmGhDmJUkFXVmInRS3yIQkBWIlNxKS9qezUKAjyVIXVtX5OTP6tj478FHiGes7eGWwc34bzJudNRPblBTUf5CK00wcHQbDE3')
 
     var verifyButton = document.getElementById('verify-button');
 
-    verifyButton.addEventListener('click', function () {
+    verifyButton.addEventListener('click', function() {
         // Get the VerificationSession client secret using the server-side
         // endpoint you created in step 3.
         fetch('/create-verification-session', {
             method: 'POST',
         })
-            .then(function (response) {
+            .then(function(response) {
                 return response.json();
             })
-            .then(function (session) {
+            .then(function(session) {
                 // Show the verification modal.
                 return stripe.verifyIdentity(session.client_secret);
             })
-            .then(function (result) {
-                // If `verifyIdentity` fails, you should display the localized
-                // error message to your user using `error.message`.
+            .then(function(result) {
+                // If `verifyIdentity` fails, you should display the error message
+                // using `error.message`.
                 if (result.error) {
                     alert(result.error.message);
+                } else {
+                    window.location.href = 'submit-verification-session';
                 }
             })
-            .catch(function (error) {
+            .catch(function(error) {
                 console.error('Error:', error);
             });
     });
