--- a/src/main/resources/templates/LogInView.html
+++ b/src/main/resources/templates/LogInView.html
@@ -13,27 +13,52 @@
     <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
     <!-- Template Main CSS File -->
     <link href="../assets/css/style.css" rel="stylesheet">
+    <style>
+        .centered-input {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .buttonLogIn {
+            background-color: #47b2e4;
+            color: white;
+            border: none;
+            padding: 15px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+    </style>
 </head>
+
 <body>
+
 <div th:replace="~{/PageFrame :: navbar}"></div>
-<div>
+<br>
+<div class="centered-input">
     <form action="#" th:action="@{/authentication/login}" th:object="${login}" method="post">
-        <label >Username</label>
-        <br/>
-        <input type="text" th:field="*{username}"/>
-        <br/><label class="error" style="color: red; font-weight: normal;" th:errors="*{username}">Username error placeholder</label>
-        <br/>
+        <label class="centered-input">Username</label>
+        <input class="input-group-text" type="text" th:field="*{username}"/>
+        <label style="color: red; font-weight: normal;" th:errors="*{username}">Username error
+            placeholder</label>
 
-        <label>Password</label>
-        <br/>
-        <input type="password" th:field="*{password}"/>
-        <br/><label class="error" style="color: red; font-weight: normal;" th:errors="*{password}">Password error placeholder</label>
-        <br/>
-
-        <input type="submit" value="Sign in"/>
+        <br>
+        <label class="centered-input">Password</label>
+        <input class="input-group-text" type="password" th:field="*{password}"/>
+        <label class="flex-fill" style=" color: red; font-weight: normal;" th:errors="*{password}">Password error
+            placeholder</label>
+        <br>
+        <div class="centered-input">
+            <input class="buttonLogIn" type="submit" value="Sign in"/>
+        </div>
     </form>
 </div>
-
+<br>
 <div th:replace="~{/PageFrame :: footer}"></div>
 </body>
 </html>
