--- a/src/main/resources/templates/CategoryUpdateView.html
+++ b/src/main/resources/templates/CategoryUpdateView.html
@@ -1,36 +1,44 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<!--<div th:insert="~{/PageFrame :: head('Categories')}"></div>-->
 <head>
-    <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta charset="UTF-8">
+    <title>Create a saving wallet</title>
+    <link href="../static/category.css" th:href="@{/category.css}" rel="stylesheet">
+    <link href="../static/navbar.css" th:href="@{/navbar.css}" rel="stylesheet">
+    <link href="../static/footer.css" th:href="@{/footer.css}" rel="stylesheet">
 
-    <title>Arsha Bootstrap Template - Index</title>
-    <meta content="" name="description">
-    <meta content="" name="keywords">
+    <!--    <link href="../static/assets/vendor/scss/helpers/_position.scss" th:href="@{/_position.scss}" rel="stylesheet">-->
+<!--    <meta charset="utf-8">-->
+<!--    <meta content="width=device-width, initial-scale=1.0" name="viewport">-->
 
-    <!-- Favicons -->
-    <link href="../../assets/img/favicon.png" rel="icon">
-    <link href="../../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+<!--    <title>Arsha Bootstrap Template - Index</title>-->
+<!--    <meta content="" name="description">-->
+<!--    <meta content="" name="keywords">-->
+
+<!--    &lt;!&ndash; Favicons &ndash;&gt;-->
+<!--    <link href="../../assets/img/favicon.png" rel="icon">-->
+<!--    <link href="../../assets/img/apple-touch-icon.png" rel="apple-touch-icon">-->
 
 
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Jost:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
-          rel="stylesheet">
+<!--    &lt;!&ndash; Google Fonts &ndash;&gt;-->
+<!--    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Jost:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"-->
+<!--          rel="stylesheet">-->
 
     <!-- Vendor CSS Files -->
-    <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
-    <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="../assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-    <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-    <link href="../assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-    <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-    <!-- Template Main CSS File -->
-    <link href="../assets/css/style.css" rel="stylesheet">
+    <link href="../../assets/vendor/aos/aos.css" rel="stylesheet">
+    <link href="../../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="../../assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+    <link href="../../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+    <link href="../../assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+    <link href="../../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+     Template Main CSS File
+    <link href="../../assets/css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<!--    <title>Transactions</title>-->
+<!--    &lt;!&ndash; Include DataTables CSS &ndash;&gt;-->
+<!--    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.css">-->
 
     <!-- =======================================================
     * Template Name: Arsha
@@ -41,32 +49,27 @@
     ======================================================== -->
 </head>
 
+
 <body>
-<div th:replace="~{/PageFrame :: navbar}"></div>
+<!--<header th:replace="NavBar.html :: navbar"></header>-->
+<div th:replace="~{/NavBar.html :: navbar}"></div>
 
-<div>
-<section id="contact" class="contact">
-    <div class="container" data-aos="fade-up">
+<br><br>
+<section id="faq" class="faq section-bg">
 
-        <div class="section-title">
-            <h2>Edit Category</h2>
-        </div>
-
-
-        <form id="category-update-form" action="#" th:action="@{/categories/{name}/update(name=${category.getName()})}" th:object="${category}" method="post">
-        <label id="category-update-title" >Please enter the new category name:</label>
+<section id="category-update-container">
+    <form id="category-update-form" action="#" th:action="@{/categories/{name}/update(name=${category.getName()})}"
+          th:object="${category}" method="post">
+        <label id="category-update-title">Please enter the new category name:</label>
         <br/>
         <input id="category-updated-name" type="text" th:field="*{name}"/>
         <label class="error" th:errors="*{name}">Title error placeholder</label>
         <br/>
-            <div class="text-center"><button type="submit">Send Message</button></div>
+        <input id="update-category-button" type="submit" value="SAVE"/>
     </form>
-    </div>
 </section>
-<br><br>
-</div>
+</section>
 
-<div th:replace="~{/PageFrame :: footer}"></div>
 <!--&lt;!&ndash; Vendor JS Files &ndash;&gt;-->
 <!--<script src="../assets/vendor/aos/aos.js"></script>-->
 <!--<script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>-->
@@ -76,7 +79,7 @@
 <!--<script src="../assets/vendor/waypoints/noframework.waypoints.js"></script>-->
 <!--<script src="../assets/vendor/php-email-form/validate.js"></script>-->
 <!--&lt;!&ndash; Template Main JS File &ndash;&gt;-->
-<!--<script src="../assets/js/main.js"></script>-->
-
+<!--<script src="../../assets/js/main.js"></script>-->
+<div th:replace="~{/PageFrame :: footer}"></div>
 </body>
 </html>
