--- a/src/main/resources/templates/categoriesView.html
+++ b/src/main/resources/templates/categoriesView.html
@@ -44,8 +44,8 @@
 </head>
 
 <body>
-<div th:replace="~{/PageFrame :: navbar}"></div>
-
+<div th:replace="~{/NavBar.html :: navbar}"></div>
+<br><br>
 <div th:if="${categories.isEmpty()}">
     <h3 id="no-categories" th:text="#{'YOU STILL HAVE NO CATEGORIES'}">YOU STILL HAVE NO CATEGORIES</h3>
 </div>
@@ -61,22 +61,23 @@
                     category name to expand and view its transactions.</p>
 
 
-            <div class="form-popup" id="myForm">
-                <form th:method="post" class="form-container" th:action="@{/categories/new}" th:object="${categoryDto}">
-                    <input type="text" placeholder="Enter New Category" th:field="*{name}" required>
-                    <button class="submit">Submit</button>
-                    <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
-                </form>
-            </div>
+                <div class="form-popup" id="myForm">
+                    <form th:method="post" class="form-container" th:action="@{/categories/new}"
+                          th:object="${categoryDto}">
+                        <input type="text" placeholder="Enter New Category" th:field="*{name}" required>
+                        <button class="submit">Submit</button>
+                        <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
+                    </form>
+                </div>
 
-            <div style="margin-top: 50px;">
-                <div class="centered">
-                    <div class="plus" id="plus" onclick="openForm()">
-                        <div class="plus__line plus__line--v"></div>
-                        <div class="plus__line plus__line--h"></div>
+                <div style="margin-top: 50px;">
+                    <div class="centered">
+                        <div class="plus" id="plus" onclick="openForm()">
+                            <div class="plus__line plus__line--v"></div>
+                            <div class="plus__line plus__line--h"></div>
+                        </div>
                     </div>
                 </div>
-            </div>
             </div>
 
             <br><br>
@@ -88,28 +89,37 @@
                     <div th:each="category : ${categories}">
                         <li data-aos="fade-up" data-aos-delay="100">
 
-                            <i class="bx bx-help-circle icon-help">
 
-                                    <div class="buttons">
-                                        <a id="edit-icon" th:href="@{/categories/{name}/update(name=${category.getName().toLowerCase()})}">
-                                            <button class="edit-btn" value='Edit category' title="Edit category"><i class="fa fa-edit"></i></button>
-                                        </a>
-                                        <a th:href="@{/categories/{name}/delete(name=${category.getName().toLowerCase()})}">
-                                            <button class="edit-btn" value='Delete category' title="Delete category"><i class="fa fa-trash"></i></button>
-                                        </a>
-                                    </div>
+                            <i class="bx bx-help-circle icon-help"></i>
 
-                            </i>
 
                             <a data-bs-toggle="collapse" class="collapse"
                                th:data-bs-target="'#faq-list-' + ${category.spendingCategoryId}"
                                th:text="${category.name}">
-
                                 <i class="bx bx-chevron-down icon-show"></i>
                                 <i class="bx bx-chevron-up icon-close"></i>
                             </a>
+                            <div class="buttons">
+                                <a id="edit-icon" data-toggle="modal" data-target="#editCategoryModal" th:href="@{/categories/{name}/update(name=${category.name})}">
+
+<!--                                                                   th:href="@{/categories/{name}/update(name=${category.getName().toLowerCase()})}">-->
+                                    <button class="edit-btn" value='Edit category' title="Edit category"><i
+                                            class="fa fa-edit"></i></button>
+                                </a>
+                                <a th:href="@{/categories/{name}/delete(name=${category.getName().toLowerCase()})}">
+                                    <button class="edit-btn" value='Delete category' title="Delete category"><i
+                                            class="fa fa-trash"></i></button>
+                                </a>
+                            </div>
+
+                            <br><br>
+
+                            <!--                            <i class="bx bx-chevron-down icon-show"></i>-->
+                            <!--                            <i class="bx bx-chevron-up icon-close"></i>-->
+                            <!--                            </a>-->
                             <div th:id="'faq-list-' + ${category.spendingCategoryId}" class="collapse"
                                  data-bs-parent=".faq-list">
+                                <br><br>
                                 <div class="table-responsive-sm">
                                     <table class="table table-hover table-sm transactionsTable">
                                         <thead class="thead-dark">
@@ -173,7 +183,6 @@
 </script>
 
 
-
 <style>
 
     .submit {
@@ -183,7 +192,7 @@
         border: none;
         cursor: pointer;
         width: 33%;
-        margin-bottom:10px;
+        margin-bottom: 10px;
         opacity: 0.8;
         margin-right: 35px;
     }
@@ -253,7 +262,7 @@
         border: none;
         cursor: pointer;
         width: 33%;
-        margin-bottom:10px;
+        margin-bottom: 10px;
         opacity: 0.8;
         margin-right: 35px;
     }
@@ -267,14 +276,23 @@
 
     /* Add animation (fade in the popup) */
     @-webkit-keyframes fadeIn {
-        from {opacity: 0;}
-        to {opacity: 1;}
+        from {
+            opacity: 0;
+        }
+        to {
+            opacity: 1;
+        }
     }
 
     @keyframes fadeIn {
-        from {opacity: 0;}
-        to {opacity:1 ;}
+        from {
+            opacity: 0;
+        }
+        to {
+            opacity: 1;
+        }
     }
+
     .plus {
         width: 100px;
         cursor: pointer;
@@ -289,6 +307,7 @@
     .plus:hover {
         background-color: rebeccapurple;
     }
+
     .plus__line {
         width: 6px;
         height: 50px;
@@ -298,9 +317,11 @@
         left: calc(50% - 3px);
         top: calc(50% - 25px);
     }
+
     .plus__line--h {
         transform: rotate(90deg);
     }
+
     .plus__line--v {
         display: flex;
         align-items: center;
@@ -308,6 +329,7 @@
         overflow: hidden;
         transition: all 0.4s ease 0s;
     }
+
     .plus__link {
         color: #fff;
         font-size: 30px;
@@ -316,10 +338,12 @@
         transition: 0.3s ease 0s;
         transform: scale(0.5);
     }
+
     .plus--active {
         height: 32px;
         border-radius: 30px;
     }
+
     .plus--active .plus__line--v {
         height: 68px;
         top: calc(-100% - 60px);
@@ -329,12 +353,14 @@
         border-radius: 60px;
         left: calc(50% - 110px);
     }
+
     .plus--active .plus__link {
         opacity: 1;
         visibility: visible;
         transform: scale(1);
         transition-delay: 0.05s;
     }
+
     .centered {
         display: flex;
         width: 100%;
@@ -363,15 +389,18 @@
         border-radius: 0.25em;
         text-shadow: -1px -1px 0px rgba(0, 0, 0, 0.4);
     }
+
     .primary {
         line-height: 40px;
         transition: ease-in-out 0.2s;
         padding: 0 16px;
     }
+
     .primary:hover, .condensed:hover, .touch:hover {
         transform: scale(1.02);
         box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2), inset 0 0 0 99999px rgba(0, 0, 0, 0.2);
     }
+
     /* 2nd alternate hover colors if hover inset shadow not working properly
      .edit:hover {
      background: darken($gw-blue, 10%);
@@ -395,6 +424,7 @@
         padding: 0 8px;
         box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
     }
+
     .touch {
         transition: ease-in-out 0.2s;
         line-height: 30px;
@@ -402,6 +432,7 @@
         padding: 0px;
         text-align: center;
     }
+
     .edit:before, .save:before, .new:before, .cancel:before, .delete:before {
         font-family: FontAwesome;
         display: inline-block;
@@ -410,25 +441,31 @@
         background: none;
         color: #FFF;
     }
+
     .condensed.edit:before, .condensed.save:before, .condensed.new:before, .condensed.cancel:before, .condensed.delete:before {
         content: none;
     }
+
     .touch.edit:before, .touch.save:before, .touch.new:before, .touch.cancel:before, .touch.delete:before {
         width: 100%;
         text-align: center;
         font-size: 1.25rem;
     }
+
     .inlineIcon.edit, .inlineIcon.save, .inlineIcon.new, .inlineIcon.cancel, .inlineIcon.delete {
         background: transparent;
     }
+
     .inlineIcon.edit:before, .inlineIcon.save:before, .inlineIcon.new:before, .inlineIcon.cancel:before, .inlineIcon.delete:before {
         line-height: 32px;
         font-size: 32px;
         padding: 4px 0px;
     }
+
     .edit {
         background: rebeccapurple;
     }
+
     .edit:before {
         content: "\f040";
     }
@@ -440,9 +477,11 @@
     .delete {
         background: #c0392b;
     }
+
     .delete:before {
         content: "\f1f8";
     }
+
     .inlineIcon.delete:before {
         color: #c0392b;
     }
