Added password change view, update UserEditView. Fix Register method in AuthenticationMvcController

--- a/src/main/resources/templates/LogInView.html
+++ b/src/main/resources/templates/LogInView.html
@@ -38,8 +38,8 @@
 
 <body>
 
-<div th:replace="~{/PageFrame :: navbar}"></div>
-<br>
+<div th:replace="~{/PageFrame :: navbarTest}"></div>
+<br><br><br><br>
 <div class="centered-input">
     <form action="#" th:action="@{/authentication/login}" th:object="${login}" method="post">
         <label class="centered-input">Username</label>
