--- a/src/main/resources/templates/RegisterView.html
+++ b/src/main/resources/templates/RegisterView.html
@@ -7,9 +7,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="CodeHim">
-    <title> Verify code </title>
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css'>
-
+    <link href="../static/category.css" th:href="@{/category.css}" rel="stylesheet">
     <!-- Vendor CSS Files -->
     <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
     <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -67,13 +66,17 @@
     </style>
 </head>
 <body>
-<div th:replace="~{/PageFrame :: navbar}"></div>
+<div th:replace="~{/NavBar :: navbar}"></div>
+<br><br><br><br><br>
 <div class="centered-input">
+    <div class="section-title">
+        <h2>Welcome to Flex Pay!</h2>
+    </div>
     <form action="#" th:action="@{/authentication/register}" th:object="${register}" method="post">
         <div class="containerReg">
             <div class="centered-input">
                 <form action="#" th:action="@{/authentication/register}" th:object="${register}" method="post">
-                    <label class="form-label">Username</label> <input class="input-group-text" type="text"
+                    <label class="form-label" style>Username</label> <input class="input-group-text" type="text"
                                                                       th:field="*{username}" required/>
                     <label style="color: red; font-weight: normal;" th:errors="*{username}">Username error
                         placeholder</label>
@@ -92,10 +95,11 @@
                     <label style="color: red; font-weight: normal;" th:errors="*{email}">Password error
                         placeholder</label>
 
-                    <label class="form-label">Phone number</label> <input class="input-group-text" type="number"
+                    <label class="form-label">Phone number</label> <input class="input-group-text" type="text"
                                                                           th:field="*{phoneNumber}" required/>
                     <label style="color: red; font-weight: normal;" th:errors="*{phoneNumber}">Password error
                         placeholder</label>
+                    <br>
                     <div class="centered-input">
                         <input class="buttonLogIn" type="submit" value="Register"/>
                     </div>
@@ -104,6 +108,16 @@
         </div>
     </form>
 </div>
+<div th:replace="~{/PageFrame :: footer}"></div>
+<!-- Vendor JS Files -->
+<script src="../assets/vendor/aos/aos.js"></script>
+<script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="../assets/vendor/glightbox/js/glightbox.min.js"></script>
+<script src="../assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+<script src="../assets/vendor/swiper/swiper-bundle.min.js"></script>
+<script src="../assets/vendor/waypoints/noframework.waypoints.js"></script>
+<script src="../assets/vendor/php-email-form/validate.js"></script>
 
+<script src="../assets/js/main.js"></script>
 </body>
 </html>
