--- a/src/main/resources/templates/TokenVerificationView.html
+++ b/src/main/resources/templates/TokenVerificationView.html
@@ -3,12 +3,9 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="CodeHim">
     <title> Verify code </title>
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css'>
 
-    <!-- Vendor CSS Files -->
     <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
     <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
@@ -16,7 +13,6 @@
     <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
     <link href="../assets/vendor/remixicon/remixicon.css" rel="stylesheet">
     <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-
     <!-- Template Main CSS File -->
     <link href="../assets/css/style.css" rel="stylesheet">
 </head>
@@ -181,8 +177,8 @@
 </style>
 <body>
 <div>
-    <div th:replace="~{/PageFrame :: navbar}"></div>
-
+    <div th:replace="~{/NavBar :: navbar}"></div>
+    <br><br><br>
     <main class="cd__main">
         <!-- Start DEMO HTML (Use the following code into your project)-->
         <boddy class="container-fluid bg-body-tertiary d-block">
@@ -228,11 +224,7 @@
         </boddy>
     </main>
 </div>
-<div th:replace="~{PageFrame :: footer}"></div>
-
-<!-- Script JS -->
-<script src="../js/script.js"></script>
-<div th:replace="~{PageFrame :: scripts}"></div>
+<div th:replace="~{/PageFrame :: footer}"></div>
 <!-- Vendor JS Files -->
 <script src="../assets/vendor/aos/aos.js"></script>
 <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -242,8 +234,6 @@
 <script src="../assets/vendor/waypoints/noframework.waypoints.js"></script>
 <script src="../assets/vendor/php-email-form/validate.js"></script>
 
-<!-- Template Main JS File -->
 <script src="../assets/js/main.js"></script>
-<!--$%analytics%$-->
 </body>
 </html>
