--- a/src/main/resources/templates/CategoryUpdateView.html
+++ b/src/main/resources/templates/CategoryUpdateView.html
@@ -5,7 +5,7 @@
     <title>Create a saving wallet</title>
     <link href="../static/category.css" th:href="@{/category.css}" rel="stylesheet">
     <link href="../static/navbar.css" th:href="@{/navbar.css}" rel="stylesheet">
-    <link href="../static/footer.css" th:href="@{/footer.css}" rel="stylesheet">
+<!--    <link href="../static/footer.css" th:href="@{/footer.css}" rel="stylesheet">-->
 
     <!--    <link href="../static/assets/vendor/scss/helpers/_position.scss" th:href="@{/_position.scss}" rel="stylesheet">-->
 <!--    <meta charset="utf-8">-->
