--- a/src/main/resources/templates/cardsView.html
+++ b/src/main/resources/templates/cardsView.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <title>Create a saving wallet</title>
     <link href="../static/card.css" th:href="@{/card.css}" rel="stylesheet">
+    <link href="../static/plusModal.css" th:href="@{/plusModal.css}" rel="stylesheet">
     <link href="../static/navbar.css" th:href="@{/navbar.css}" rel="stylesheet">
-<!--    <link href="../static/footer.css" th:href="@{/footer.css}" rel="stylesheet">-->
+    <!--    <link href="../static/footer.css" th:href="@{/footer.css}" rel="stylesheet">-->
 
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,100' rel='stylesheet' type='text/css'>
 
@@ -25,12 +26,12 @@
     <!-- Vendor CSS Files -->
     <link href="../../assets/vendor/aos/aos.css" rel="stylesheet">
     <link href="../../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-<!--    <link href="../../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">-->
-<!--    <link href="../../assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">-->
-<!--    <link href="../../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">-->
-<!--    <link href="../../assets/vendor/remixicon/remixicon.css" rel="stylesheet">-->
-<!--    <link href="../../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">-->
-<!--    Template Main CSS File-->
+    <!--    <link href="../../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">-->
+    <!--    <link href="../../assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">-->
+    <!--    <link href="../../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">-->
+    <!--    <link href="../../assets/vendor/remixicon/remixicon.css" rel="stylesheet">-->
+    <!--    <link href="../../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">-->
+    <!--    Template Main CSS File-->
     <link href="../assets/css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -62,6 +63,26 @@
                 <p>This is your category page. Here you can view and manage your spending categories. Click on a
                     category name to expand and view its transactions.</p>
 
+<!--                <div class="form-popup" id="myForm">-->
+<!--                    <form th:method="post" class="form-container" th:action="@{/cards/new}"-->
+<!--                          th:object="${cardDto}">-->
+<!--                        <input type="text" placeholder="Enter New Card" th:field="*{ca}" required>-->
+<!--                        <button class="submit">Submit</button>-->
+<!--                        <button type="button" class="btn cancel" onclick="closeForm()">Close</button>-->
+<!--                    </form>-->
+<!--                </div>-->
+
+                <div style="margin-top: 50px;">
+                    <div class="centered">
+                        <a th:href="@{/cards/new}">
+                            <div class="plus" id="plus">
+                                <div class="plus__line plus__line--v"></div>
+                                <div class="plus__line plus__line--h"></div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+
             </div>
 
             <br><br>
@@ -74,7 +95,7 @@
                             <i class="bx bx-help-circle icon-help"></i>
                             <a data-bs-toggle="collapse" class="collapse"
                                th:data-bs-target="'#faq-list-' + ${card.id}"
-                               th:text="'(' + ${iterationStatus.count} + ') CardNumber: ' + ${card.cardNumber}">
+                               th:text="${iterationStatus.count} + '. CardNumber: ' + ${card.cardNumber} + ' - ' + (${card.deleted} ? 'Inactive' : 'Active')">
                                 <i class="bx bx-chevron-down icon-show"></i>
                                 <i class="bx bx-chevron-up icon-close"></i>
                             </a>
@@ -96,18 +117,18 @@
                                         <a class="card" th:text="${card.expirationDate}">Card number</a>
                                     </div>
                                     <div class="cell">
-                                        <!--                                            <a th:href="@{{id}/update/{cardId}(id=${user.getId()}, cardId=${card.getId()})}">-->
-                                        <button class="btn" value='Update card' title="Update card"><i
-                                                class="fa fa-pencil"></i></button>
-                                        <!--                                            </a>-->
-                                        <!--                                            <a th:href="@{{id}/delete/{cardId}(id=${user.getId()}, cardId=${card.getId()})}">-->
-                                        <!--                                                <button class="btn" value='Delete card' title="Delete card"><i class="fa fa-trash"></i></button>-->
-                                        <!--                                            </a>-->
-                                        <!--                                        </div>-->
+                                        <a th:href="@{cards/update/{id}(id=${card.id})}">
+                                            <button class="btn" value='Update card' title="Update card"><i
+                                                    class="fa fa-pencil"></i></button>
+                                        </a>
+                                        <a th:href="@{cards/delete/{id}(id=${card.id})}">
+                                            <button class="btn" value='Delete category' title="Delete category"><i
+                                                    class="fa fa-trash"></i></button>
+                                        </a>
                                     </div>
-                                    <!--                                    <a th:href="@{/cards/user/{id}/new(id=${user.getId()})}">-->
-                                    <!--                                        <button class="btn" value='Add new card' title="Add new card">Add Card</button>-->
-                                    <!--                                    </a>-->
+<!--                                    <a th:href="@{/cards/user/{id}/new(id=${user.getId()})}">-->
+<!--                                        <button class="btn" value='Add new card' title="Add new card">Add Card</button>-->
+<!--                                    </a>-->
                                     <!--        <a th:href="@{/cards}">-->
                                     <!--            <button class="btn" value='Back to card dashboard' title="Back to card dashboard">-->
                                     <!--                <i class="fa fa-arrow-left"></i></button>-->
