Admin view and admin Mvc Done

--- a/src/main/resources/templates/LogInView.html
+++ b/src/main/resources/templates/LogInView.html
@@ -40,7 +40,7 @@
 
 <body>
 
-<div th:replace="~{/PageFrame :: navbarTest}"></div>
+<div th:replace="~{/NavBar :: navbar}"></div>
 <br><br><br><br>
 <div class="section-title">
     <h2>Log in</h2>
