--- a/src/main/resources/templates/AdminView.html
+++ b/src/main/resources/templates/AdminView.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -282,7 +282,9 @@
                     <br>
                 </div>
                 <form class="search-bar" action="#" th:action="@{/admin}" th:object="${filterOptions}" method="get">
-                    <input type="text" placeholder="Search by username, email, or phone number">
+                    <input type="text" th:field="*{username}" placeholder="Search by username">
+                    <input type="text" th:field="*{email}" placeholder="Search by email">
+                    <input type="text" th:field="*{phoneNumber}" placeholder="Search by phone number">
                     <div class="sort-controls">
                         <select th:field="*{sortBy}">
                             <option value="username">Username</option>
@@ -301,8 +303,10 @@
         <table class="table table-striped table-hover">
             <thead>
             <tr>
-                <th>#</th>
+                <th>№</th>
                 <th>Name</th>
+                <th>Email</th>
+                <th>Phone number</th>
                 <th>Date Created</th>
                 <th>Role</th>
                 <th>Account Status</th>
@@ -314,10 +318,13 @@
                 <td th:text="${userStat.index + 1}"></td>
                 <td><a><img src="/examples/images/avatar/1.jpg" class="avatar" alt="Avatar"> <span
                         th:text="${user.username}"></span></a></td>
+                <td th:text="${user.email}"></td>
+                <td th:text="${user.phoneNumber}"></td>
                 <td th:text="${user.creationDate}"></td>
                 <td th:text="${user.roleType}"></td>
                 <td><span class="status text-success" th:classappend="${user.accountStatus}"></span> <span
-                        th:text="${user.accountStatus}"></span></td>
+                        th:text="${user.accountStatus}"></span>
+                </td>
                 <div class="button-container">
                     <td>
                         <form th:action="@{/admin/__${user.id}__/ban}" method="post">
