--- a/src/main/resources/templates/NavBar.html
+++ b/src/main/resources/templates/NavBar.html
@@ -47,17 +47,17 @@
 <!--        </footer>-->
         <div class="container d-flex align-items-center">
 
-            <h1 class="logo me-auto"><a href="index.html">Arsha</a></h1>
+            <h1 class="logo me-auto"><a href="index.html">Flex Pay</a></h1>
             <!-- Uncomment below if you prefer to use an image logo -->
             <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
             <nav id="navbar" class="navbar">
                 <ul>
-                    <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+                    <li><a class="nav-link scrollto active" th:href="@{/}">Home</a></li>
                     <li><a class="nav-link scrollto" href="#about">About</a></li>
-                    <li><a class="nav-link scrollto" href="#services">Services</a></li>
-                    <li><a class="nav-link   scrollto" href="#portfolio">Portfolio</a></li>
-                    <li><a class="nav-link scrollto" href="#team">Team</a></li>
+                    <li th:unless="${isAuthenticated}"><a class="nav-link scrollto" th:href="@{/authentication/login}">Login</a></li>
+                    <li><a class="nav-link scrollto" th:href="@{/authentication/logout}">Log out</a></li>
+                        <li><a class="nav-link scrollto" href="#team">Team</a></li>
                     <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
                             <li><a href="#">Drop Down 1</a></li>
@@ -77,7 +77,7 @@
                         </ul>
                     </li>
                     <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-                    <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
+                    <li><a class="getstarted scrollto" th:href="@{/authentication/register}">Get Started</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav><!-- .navbar -->
